2004-10-11  Andrew Pinski  <pinskia@physics.uc.edu>

	* g++.dg/eh/cleanup5.C: Add dg-options "".

2004-10-11  Roger Sayle  <roger@eyesopen.com>

	PR middle-end/17657
	* gcc.dg/switch-4.c: New test case.

2004-10-11  Richard Sandiford  <rsandifo@redhat.com>

	* gcc.c-torture/execute/20041011-1.c: New test.

2004-10-10  Andrew Pinski  <pinskia@physics.uc.edu>

	PR c++/17554
	* g++.dg/init/for3.C: New test.

	PR c++/17657
	* g++.dg/opt/switch2.C: New test.

	PR middle-end/17703
	* g++.dg/warn/Wreturn-2.C: New test.

2004-10-10  Andrew Pinski  <pinskia@physics.uc.edu>

	PR c++/17907
	* g++.dg/eh/cleanup5.C: New test.

2004-10-10  Mark Mitchell  <mark@codesourcery.com>

	PR c++/17393
	* g++.dg/parse/error21.C: New test.

2004-10-10  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* g++.dg/overload/pmf1.C: Adjust quoting marks.
	* g++.dg/warn/incomplete1.C: Likewise.
	* g++.dg/template/qualttp20.C: Likewise.

2004-10-10  Joseph S. Myers  <jsm@polyomino.org.uk>

	PR c/17881
	* parm-incomplete-1.c: New test.

2004-10-09  Mark Mitchell  <mark@codesourcery.com>

	PR c++/17867
	* g++.dg/parse/error19.C: New test.

	PR c++/17670
	* g++.dg/init/new11.C: New test.

	PR c++/17821
	* g++.dg/parse/error20.C: New test.

	PR c++/17826
	* g++.dg/template/crash24.C: New test.
	
2004-10-10  Joseph S. Myers  <jsm@polyomino.org.uk>

	PR c/17301
	* gcc.dg/pr17301-1.c: New test.

2004-10-10  Joseph S. Myers  <jsm@polyomino.org.uk>

	PR c/17189
	* gcc.dg/anon-struct-5.c: New test.

2004-10-09  Joseph S. Myers  <jsm@polyomino.org.uk>

	PR c/17844
	* gcc.dg/pr17844-1.c: New test.

2004-10-09  Zdenek Dvorak  <dvorakz@suse.cz>

	PR tree-optimization/17906
	* gcc.c-torture/compile/pr17906.c: New.

2004-10-09  Stuart Hastings  <stuart@apple.com>
	    Roger Sayle  <roger@eyesopen.com>

	PR rtl-optimization/17853
	* gcc.dg/i386-mmx-5.c: New testcase.

2004-10-09  Andrew Pinski  <pinskia@physics.uc.edu>

	* g++.dg/opt/pr17902.C: Fix typo in dg-do.
