@@ -1,3 +1,11 @@
+2004-10-11  Steve Ellcey  <sje@cup.hp.com>
+
+	* testsuite/gcc.dg/ia64-asm-1.c: Add prototype for abort
+	* testsuite/gcc.dg/ia64-sync-1.c: Add prototype for abort and
+	memcpy. 
+	* testsuite/gcc.dg/ia64-sync-2.c: Ditto.
+	* testsuite/gcc.dg/ia64-sync-3.c: Ditto.
+
 2004-10-11  Andrew Pinski  <pinskia@physics.uc.edu>
 
 	* g++.dg/eh/cleanup5.C: Add dg-options "".
